# fastapi-tutorial

./: .gitignore  pyproject.toml
app/: database.py  main.py
app/models/: database.py  item.py
app/routers/: items.py
app/services/: item_service.py
tests/: test_items.py
